--- a/Ejercicios-Javascript-Tanda 2/Ejercicio-016/index.html
+++ b/Ejercicios-Javascript-Tanda 2/Ejercicio-016/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="scripts/myscript.js" defer></script>    
     <title>Document</title>
-    <script src="scripts/myscript.js"></script>    
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <div id="contenedor"></div>
 </body>
 </html>
