--- a/Ejercicios-Javascript-Tanda 3/Ejercicio-029/index.html
+++ b/Ejercicios-Javascript-Tanda 3/Ejercicio-029/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="scripts/myscript.js" defer></script>  
+    <script src="scripts/myscript.js"></script>    
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>Ejercicio 14</h1>
-     
+    
 </body>
 </html>
