Fin carro compra y biblioteca 10Nov

--- a/UD4_CarroCompra/carrito3.html
+++ b/UD4_CarroCompra/carrito3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
-    <script src="scripts/myscript2.js" defer></script>
+    <script src="scripts/myscript3.js" defer></script>
     <title>Libreria virtual - Carrito Compra</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
             </p>
             <p class="columnas botones">
                 <input class="boton" type="submit" value="comprar" >
-                <input class="boton" type="reset" value="limpiar">
+                <input class="boton" type="reset" name="reset" id="reset" value="limpiar">
             </p>
         </form>
 
@@ -36,13 +36,13 @@
     </footer>
     <template id="template-libro">
         <div class="libro" data-id="#">
-            <strong data-id="#">    </strong>
-            <figure data-id="#">
-                <img data-id="#" src="#" alt="">
+            <strong>    </strong>
+            <figure>
+                <img src="#" alt="">
             </figure>
-            <p class="linea" data-id="#">
-                <strong data-id="#"></strong>
-                <input data-id="#" type="checkbox" name="libro" id="libro3" value="">
+            <p class="linea">
+                <strong></strong>
+                <input type="checkbox" name="libro" id="#" value="">
             </p>
         </div>
     </template>
