Reloj . En casa

--- a/UD4_Reloj con flexbox/index.html
+++ b/UD4_Reloj con flexbox/index.html
@@ -14,17 +14,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Reloj</title>
         <link rel="stylesheet" href="styles/style.css">
+        <script src="scripts/myscript.js" defer></script>
     </head>
     <body>
         <div id="contenedor">
             <div id="caja1" class="caja">
-                <label id="hora">20</label>
+                <label id="hora"></label>
             </div>
             <div id="caja2" class="caja">
-                <label id="minuto">30</label>
+                <label id="minuto"></label>
             </div>
             <div id="caja3" class="caja">
-                <label id="segundo">10</label>
+                <label id="segundo"></label>
             </div>
         </div>
     </body>
