--- a/UD4_Datos alumnos/index.html
+++ b/UD4_Datos alumnos/index.html
@@ -118,17 +118,20 @@
         <h2>Lista de contactos</h2>
         <div id="contactos">
           <table class="estilo-tabla">
-            <tr>
-              <th>Nombre</th>
-              <th>Apellidos</th>
-              <th>Email</th>
-              <th>Telefono</th>
-              <th>fechaNacimiento</th>
-              <th>Sexo</th>
-              <th>Estudios</th>
-              <th>Operaciones</th>
-              <!-- añadir botones para acciones -->
-            </tr>
+            <thead>
+              <tr>
+                <th>Nombre</th>
+                <th>Apellidos</th>
+                <th>Email</th>
+                <th>Telefono</th>
+                <th>fechaNacimiento</th>
+                <th>Sexo</th>
+                <th>Estudios</th>
+                <th>Operaciones</th>
+                <!-- añadir botones para acciones -->
+              </tr>
+            </thead>
+            <tbody></tbody>
           </table>
         </div>
       </section>
