Datos alumnos con botones-solucion de Julian

--- a/UD4_Datos alumnos/index.html
+++ b/UD4_Datos alumnos/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/estilos.css" />
-    <!-- <script src="scripts/datosAlumnos.js" defer></script> -->
-    <script src="scripts/myscript.js" defer></script>
+    <!-- <script src="scripts/datosAlumnos.js" defer></script> 
+    <script src="scripts/myscript.js" defer></script>    -->
+    <script src="scripts/myscript2.js" defer></script>
     <title>Lista de contactos</title>
   </head>
   <body>
@@ -139,5 +140,20 @@
     <footer>
       <p>&#169; RBH</p>
     </footer>
+    <template id="template-fila">
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>
+          <a href="#" class="delete">Delete</a>
+          <a href="#" class="update">Update</a>
+        </td>
+      </tr>
+    </template>
   </body>
 </html>
