DOM te lo hago 25 enero

--- a/TeLoHago - Alumnos/index.html
+++ b/TeLoHago - Alumnos/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Akaya Kanadaka">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" defer></script>
     <title>TeLoHago</title>
 </head>
 <body>
@@ -50,7 +51,7 @@
       </fieldset>
       <fieldset>
             <legend>Tareas</legend>
-              <section class="precio">
+            <section class="precio">
               <h1 id="importe">Importe</h1>
               <p id="total">
                   Total: <span id="cantidad">0<span>
@@ -81,7 +82,7 @@
                   <span class="checkmark"></span>
                 </label>
               </span> 
-          </p> 
+            </p> 
         
             <p>
               <label for="fecha" class="fecha">Fecha</label>
@@ -102,6 +103,6 @@
       </fieldset>
       <input type="submit" id="enviar" name="enviar" value="Procesar Pedido"/>
     </form>   
-    <script src="js/mijs.js"></script>
+    <!-- <script src="js/mijs.js"></script> -->
 </body>
 </html>
