--- a/UD6_DOM - Tareas App - Alumnos/index.html
+++ b/UD6_DOM - Tareas App - Alumnos/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <!-- <script src="scripts/solucion.js" defer></script> -->
+    <link rel="stylesheet" href="styles/mystyle.css">
     <script src="scripts/script2.js" defer></script>
     <title>Lista de Tareas</title>
 </head>
