App para test 15 febrero

--- a/UD6_DOM - App para Tests/index.html
+++ b/UD6_DOM - App para Tests/index.html
@@ -11,29 +11,21 @@
     <div class="contenedor-test" id="test">
       <div class="cabecera-test">
         <h2 id="pregunta">Texto de la pregunta</h2>
-        <ul>
-          <li>
-            <input type="radio" name="respuesta" id="a" class="respuesta">
-            <label for="a" id="respuesta_a">Respuesta</label>
-          </li>
-
-          <li>
-            <input type="radio" name="respuesta" id="b" class="respuesta">
-            <label for="b" id="respuesta_b">Respuesta</label>
-          </li>
-
-          <li>
-            <input type="radio" name="respuesta" id="c" class="respuesta">
-            <label for="c" id="respuesta_c">Respuesta</label>
-          </li>
-
-          <li>
-            <input type="radio" name="respuesta" id="d" class="respuesta">
-            <label for="d" id="respuesta_d">Respuesta</label>
-          </li>
-        </ul>
+        <ul></ul>
       </div>
       <button id="submit">Enviar</button>
     </div>
+    <template id="template-final">
+      <div class="cabecera-test">
+        <h2>Texto</h2> 
+      </div>
+      <button id="repite">Repetir !!!</button>
+    </template>
+    <template id="template-respuesta">
+      <li>
+        <input type="radio" name="respuesta" id="#" class="respuesta">
+        <label for="#">Respuesta</label>
+      </li>
+    </template>
   </body>
 </html>
