App para test con reload

--- a/HECHOS/UD6_DOM - App para Tests/index_hidden.html
+++ b/HECHOS/UD6_DOM - App para Tests/index_hidden.html
@@ -15,6 +15,12 @@
       </div>
       <button id="submit">Enviar</button>
     </div>
+    <div class="contenedor-test" id="final" hidden>
+      <div class="cabecera-test">
+        <h2 id="solucion"></h2> 
+      </div>
+      <button id="repite">Repetir !!!</button>
+    </div>
     <template id="template-respuesta">
       <li>
         <input type="radio" name="respuesta" id="#" class="respuesta">
