paginacion pokemon_paginacion infinita con scroll

--- a/Paginacion de Pokemons - Alumnos/index.html
+++ b/Paginacion de Pokemons - Alumnos/index.html
@@ -12,7 +12,9 @@
   <h1>Pokémons</h1>
   <nav class="links"></nav>
   <main class="grid-fluid"></main>
-  <script src="js/myscript.js"></script>
+  <img class="loader hide" src="assets/loader.svg" alt="cargando....">
+  <div id="scroll-sentinel"></div>
+  <script src="js/myscript4.js"></script>
 </body>
 
 </html>
