registro datos alumnos 19 abr

--- a/Paginacion de Pokemons - Alumnos/index.html
+++ b/Paginacion de Pokemons - Alumnos/index.html
@@ -14,7 +14,7 @@
   <main class="grid-fluid"></main>
   <img class="loader hide" src="assets/loader.svg" alt="cargando....">
   <div id="scroll-sentinel"></div>
-  <script src="js/myscript4.js"></script>
+  <script src="js/myscript.js"></script>
 </body>
 
 </html>
