--- a/Registro de Datos - Alumnos/index.html
+++ b/Registro de Datos - Alumnos/index.html
@@ -64,7 +64,7 @@
                 </p>   
             </fieldset>
             <p>
-                <button id="add">Añadir</button>
+                <button id="add" name="add">Añadir</button>
             </p>
         </form>
     </main>
