biblioteca 3 de mayo

--- a/AJAX - Biblioteca - Alumnos/index.html
+++ b/AJAX - Biblioteca - Alumnos/index.html
@@ -51,7 +51,7 @@
         <template id="template-tabla">
           <table>
             <thead>
-              <tr><td>Título</td><td>Autor</td><td>Editorial</td><td>Género</td><td>Páginas</td><td>Fecha Ed.</td></tr>
+              <tr><th>Título</th><th>Autor</th><th>Editorial</th><th>Género</th><th>Páginas</th><th>Fecha Ed.</th></tr>
             </thead>
             <tbody>
               <!-- template-row -->
